* compile.c (iseq_compile_each): fix splat condition in NODE_WHEN.   [Bug #2226]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@27376 b2dd03c8-39d4-4d8f-98ff-823fe69b080e